# Power-Retention-MLX

./: .gitignore  MIGRATION_GUIDE.md  README.md  TRAINING_STATUS.md  TRAIN_NOW.md  pyproject.toml  train.py  train_llm.py  train_small_working.py
docs/guides/: METAL_KERNELS.md  QUICK_START.md
docs/llm/: GETTING_STARTED.md  README.md
examples/: __init__.py
examples/advanced/: rl_integration.py
examples/basic/: STRUCTURE_COMPARISON.txt  model_building.py  simple_usage.py
examples/llm/: quick_start.py
llm/: __init__.py  requirements.txt
llm/data/: __init__.py  data_processor.py  data_sources.py
llm/models/: __init__.py  retention_llm.py
llm/training/: __init__.py  utils.py
src/power_retention/: __init__.py  core.py
src/power_retention/cli/: main.py  wizard.py
src/power_retention/dashboard/: app.py
src/power_retention/dashboard/templates/: index.html
tests/: __init__.py  test_cli.py  test_llm.py  test_power_retention.py
